--- a/chart/templates/roles.yaml
+++ b/chart/templates/roles.yaml
@@ -7,7 +7,7 @@ rules:
   resources: ["mutatingwebhookconfigurations"]
   verbs: ["get", "watch", "list","create","update","delete"]
 - apiGroups: ["","events.k8s.io","apps"]
-  resources: ["pods","services"]
+  resources: ["pods","services","namespaces"]
   verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
