--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "tls.serviceAccountName" . }}
+  name: {{ include "kpture.serviceAccountName" . }}
   labels:
-    {{- include "tls.labels" . | nindent 4 }}
+    {{- include "kpture.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
