--- a/chart/templates/roles.yaml
+++ b/chart/templates/roles.yaml
@@ -7,8 +7,8 @@ rules:
   resources: ["mutatingwebhookconfigurations"]
   verbs: ["get", "watch", "list","create","update","delete"]
 - apiGroups: ["","events.k8s.io","apps"]
-  resources: ["pods","services","namespaces"]
-  verbs: ["get", "list"]
+  resources: ["pods","services","namespaces","pods/log"]
+  verbs: ["get", "list","update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
