--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Go
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   build:
     uses: ./.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          RELEASE_BRANCHES: "master"
+          RELEASE_BRANCHES: "main"
           DRY_RUN: "true"
           DEFAULT_BUMP : "patch"
       - name: Build and push
