--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          file: Dockerfile
           push: false
           # tags: kpture/server:${{ steps.bumptag.outputs.new_tag }}
           tags: kpture/server:latest
