--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,33 +9,29 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Bump version and push tag
-        id: bumptag
-        uses: anothrNick/github-tag-action@1.26.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
-          RELEASE_BRANCHES: "main"
-          DRY_RUN: "true"
-          DEFAULT_BUMP : "patch"
+      # - name: Bump version and push tag
+      #   id: bumptag
+      #   uses: anothrNick/github-tag-action@1.26.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     WITH_V: true
+      #     RELEASE_BRANCHES: "main"
+      #     DRY_RUN: "true"
+      #     DEFAULT_BUMP : "patch"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
       #   with:
       #     username: ${{ secrets.DOCKERHUB_USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v3
+      steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+        id: buildx
         with:
-          context: .
-          file: Dockerfile
-          push: false
-          # tags: kpture/server:${{ steps.bumptag.outputs.new_tag }}
-          tags: kpture/server:latest
-          platforms: linux/amd64,linux/arm/v8,linux/arm64
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          install: true
+      - name: Build
+        run: |
+          docker build . # will run buildx
