--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
           install: true
       - name: Build
         run: |
-          docker build . # will run buildx
+          docker build . --platform=linux/amd64,linux/arm64 
