--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ jobs:
     # needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
       - name: Bump version and push tag
         id: bumptag
         uses: anothrNick/github-tag-action@1.26.0
