--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: '0'
       - name: safe repo
         run : git config --global --add safe.directory /github/workspace
       - name: Bump version and push tag
@@ -33,11 +31,17 @@ jobs:
         uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
         id: buildx
+      - name: Build and push
+        uses: docker/build-push-action@v3
         with:
-          install: true
-      - name: Build
-        run: |
-          docker build . --platform=linux/amd64,linux/arm64 -t kpture:${{ steps.bumptag.outputs.new_tag }} --push
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: "kpture/kpture:${{ steps.bumptag.outputs.new_tag }}"
+      # - name: Build
+      #   run: |
+      #     docker login --username=${{ secrets.DOCKERHUB_USERNAME }} --email=mary@docker.com
+      #     docker build . --platform=linux/amd64,linux/arm64 -t kpture:${{ steps.bumptag.outputs.new_tag }} --push
       - name: Release Changelog Builder
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v3.0.1
