--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           RELEASE_BRANCHES: "main"
-          DRY_RUN: "true"
+          # DRY_RUN: "true"
           DEFAULT_BUMP : "patch"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
