--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
               --git-repo "$repo" \
               --token "${{ secrets.GITHUB_TOKEN }}" \
               --release-name-template "{{ .Version }}" \
-              --release-notes-file ${{steps.build_changelog.outputs.changelog}} \
+              --release-notes-file "${{steps.build_changelog.outputs.changelog}}" \
               --index-path ./index.yaml \
               --charts-repo https://$owner.github.io/$repo \
               --push
