--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Go
-on:
-  push:
-    branches: [ main ]
-jobs:
-  build:
-    uses: ./.github/workflows/build.yml
+# name: Go
+# on:
+#   push:
+#     branches: [ main ]
+# jobs:
+#   build:
+#     uses: ./.github/workflows/build.yml
