--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
               --git-repo "$repo" \
               --release-notes-file ./changelog.md \
               --token "${{ secrets.GITHUB_TOKEN }}" \
+              --release-name-template "{{ .Version }}"
           # update index and push to github pages
           git config user.email "$owner@users.noreply.github.com"
           git config user.name "$owner"
