--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,17 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v3.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ steps.bumptag.outputs.new_tag }}
+          release_name: Release ${{ steps.bumptag.outputs.new_tag }}
+          body: ${{steps.build_changelog.outputs.changelog}}
+          draft: false
+          prerelease: false
       - name: Package and upload helm chart
         run: |
           tag=${{ steps.bumptag.outputs.new_tag }}
@@ -51,29 +62,43 @@ jobs:
           chmod a+x ./yq
           ./yq e '.appVersion = "${{ steps.bumptag.outputs.new_tag }}" ' -i chart/Chart.yaml
           ./yq e '.version = "${{ steps.bumptag.outputs.new_tag }}" ' -i chart/Chart.yaml
-          # donwload helm chart releaser
-          curl -sSLo cr.tar.gz "https://github.com/helm/chart-releaser/releases/download/v1.4.0/chart-releaser_1.4.0_linux_amd64.tar.gz"
-          tar -xzf cr.tar.gz
-          rm -f cr.tar.gz
-          owner=$(cut -d '/' -f 1 <<< "$GITHUB_REPOSITORY")
-          repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
-          # package chart
-          ./cr package chart
-          # upload chart to github relases
-          echo "${{steps.build_changelog.outputs.changelog}}" > chart/changelog.md
-          ./cr upload \
-              --owner "$owner" \
-              --git-repo "$repo" \
-              --release-notes-file changelog.md \
-              --token "${{ secrets.GITHUB_TOKEN }}" \
-              --release-name-template "{{ .Version }}"
-          # update index and push to github pages
-          git config user.email "$owner@users.noreply.github.com"
-          git config user.name "$owner"
-          ./cr index \
-              --owner "$owner" \
-              --git-repo "$repo" \
-              --token "${{ secrets.GITHUB_TOKEN }}" \
-              --release-name-template "{{ .Version }}" \
-              --index-path ./index.yaml \
-              --push
+      - uses: azure/setup-helm@v3
+      - name: package helm chart
+        run: helm package chart
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
+          asset_name: ./kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
+          asset_content_type: application/gzip
+     
+      #     # donwload helm chart releaser
+      #     curl -sSLo cr.tar.gz "https://github.com/helm/chart-releaser/releases/download/v1.4.0/chart-releaser_1.4.0_linux_amd64.tar.gz"
+      #     tar -xzf cr.tar.gz
+      #     rm -f cr.tar.gz
+      #     owner=$(cut -d '/' -f 1 <<< "$GITHUB_REPOSITORY")
+      #     repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
+      #     # package chart
+      #     ./cr package chart
+      #     # upload chart to github relases
+      #     echo "${{steps.build_changelog.outputs.changelog}}" > chart/changelog.md
+      #     ./cr upload \
+      #         --owner "$owner" \
+      #         --git-repo "$repo" \
+      #         --release-notes-file changelog.md \
+      #         --token "${{ secrets.GITHUB_TOKEN }}" \
+      #         --release-name-template "{{ .Version }}"
+      #     # update index and push to github pages
+      #     git config user.email "$owner@users.noreply.github.com"
+      #     git config user.name "$owner"
+      #     ./cr index \
+      #         --owner "$owner" \
+      #         --git-repo "$repo" \
+      #         --token "${{ secrets.GITHUB_TOKEN }}" \
+      #         --release-name-template "{{ .Version }}" \
+      #         --index-path ./index.yaml \
+      #         --push
