--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
-          asset_name: ./kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
+          asset_name: kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
           asset_content_type: application/gzip
      
       #     # donwload helm chart releaser
