--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
           asset_path: ./kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
           asset_name: kpture-${{ steps.bumptag.outputs.new_tag }}.tgz
           asset_content_type: application/gzip
-      - name: publish to chart repo
+      - name: Create Index yaml
         run: |   
           curl -sSLo cr.tar.gz "https://github.com/helm/chart-releaser/releases/download/v1.4.0/chart-releaser_1.4.0_linux_amd64.tar.gz"
           tar -xzf cr.tar.gz
@@ -82,9 +82,11 @@ jobs:
           repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
           git config user.email "$owner@users.noreply.github.com"
           git config user.name "$owner"
+          ./cr package chart
           ./cr index \
               --owner "$owner" \
               --git-repo "$repo" \
               --token "${{ secrets.GITHUB_TOKEN }}" \
               --release-name-template "{{ .Version }}" \
+              --index-path ./index.yaml \
               --push
