--- a/chart/templates/roles.yaml
+++ b/chart/templates/roles.yaml
@@ -2,6 +2,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: proxy
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "0"
 rules:
 - apiGroups: ["","admissionregistration.k8s.io",]
   resources: ["mutatingwebhookconfigurations"]
@@ -9,11 +12,17 @@ rules:
 - apiGroups: ["","events.k8s.io","apps"]
   resources: ["pods","services","namespaces","pods/log"]
   verbs: ["get", "list","update"]
+- apiGroups: ["",]
+  resources: ["secrets"]
+  verbs: ["get","create","delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: kpture-rbac-devspace
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "0"
 subjects:
 - kind: ServiceAccount
   name: {{ include "kpture.serviceAccountName" . }}
