--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -7,9 +7,13 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 443
       targetPort: https
       protocol: TCP
       name: https
+    - port: 80
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
     {{- include "kpture.selectorLabels" . | nindent 4 }}
