--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -1,12 +1,9 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "kpture.serviceAccountName" . }}
   labels:
     {{- include "kpture.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "0"
