--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -15,13 +15,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "kpture"
 
 podAnnotations: {}
 
@@ -38,19 +32,18 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 443
+  port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+    - paths:
+        - path: /kpture/api/
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
